# schedule_manager

./: CMakeLists.txt  FLAG.h  He_example.cpp  README.md  async_client.cpp  client_ai.cpp  info_prompt.cpp  info_prompt.h  library.h  main.cpp  scan.cpp  scan.h  schedule.cc  schedule.cpp  schedule.h  serve_ai.hpp  server.cpp  server.hpp  server_ai.cpp  task.cc  task.h  task_manager.cpp  task_manager.h  test.cpp  thread_lock.cpp  thread_lock.h  useraccount.cc  useraccount.h  usermanagerexample.cc
Backend/: CMakeLists.txt  info_prompt.cpp  info_prompt.h  server.cpp  server.hpp  task.cc  task.h  task_example.json  useraccount.cc  useraccount.h
Backend/include/: info_prompt.h  server.hpp  useraccount.h
Backend/key/: private.pem
Backend/src/: info_prompt.cpp  main.cpp  server.cpp  useraccount.cc
Frontend/: CMakeLists.txt  ScheduleManagerGUI
Frontend/include/: FLAG.h  client.hpp  login_window.h  mainwindow.h  register_window.h  scan.h  task.h  task_manager.h  thread_lock.h  uniqueid.h
Frontend/key/: public.pem
Frontend/src/: client.cpp  login_window.cpp  main.cpp  mainwindow.cc  register_window.cpp  scan.cc  task.cc  task_manager.cc
